add get /currency/:code/intraday endpoint
